z-index fixes

--- a/client/src/Background/Background.css
+++ b/client/src/Background/Background.css
@@ -1,35 +1,33 @@
-.stars-1{
+.stars-1 {
   /* visibility: hidden; */
-  /* transform: rotate(-45deg); */
-  position: fixed;
-  margin-top:-20vw;
-  margin-bottom:0vw;
-  margin-right:50vw;
-  margin-right:0vw;
+  transform: rotate(-45deg);
+  margin-right: 375vw;
+  margin-left: -40vw;
+  width: 15vw;
+  height: 20vh;
+  z-index: -1;
 }
-.stars-2{
+.stars-2 {
   /* visibility: hidden; */
-  /* transform: rotate(-45deg); */
-  position: fixed;
-   margin-top:25vw;
-  margin-bottom:0vw;
-  margin-right:40vw;
-  margin-left:0vw;
+  transform: rotate(-45deg);
+  margin-right: 350vw;
+  margin-left: -40vw;
+  width: 15vw;
+  height: 20vh;
+  z-index: -1;
 }
-.stars-3{
-  
-  /* transform: rotate(-45deg); */
-  position: fixed;
-  margin-top:-330vw;
-  margin-bottom:0vw;
-  margin-right:100vw;
-  margin-right:0vw;
+.stars-3 {
+  transform: rotate(-45deg);
+  margin-right: 400vw;
+
+  width: 15vw;
+  height: 20vh;
+  z-index: -1;
 }
-.stars-4{
-  /* transform: rotate(-45deg); */
-  position: fixed;
-   margin-top:25vw;
-  margin-bottom:0vw;
-  margin-right:60vw;
-  margin-left:0vw;
+.stars-4 {
+  transform: rotate(-45deg);
+  margin-right: 355vw;
+  width: 15vw;
+  height: 20vh;
+  z-index: -1;
 }
